// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VerifyUser renders as expected 1`] = `
Array [
  <Text
    accessibilityRole="header"
    style={
      Array [
        Object {
          "color": "black",
        },
        Object {
          "fontSize": 34,
          "fontWeight": "300",
          "lineHeight": 51,
        },
        undefined,
      ]
    }
  >
    Account recovery requires verified contact information
  </Text>,
  <View
    style={
      Array [
        Object {
          "flexDirection": "column-reverse",
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityRole="radiogroup"
      style={
        Object {
          "flexDirection": "column",
        }
      }
    >
      <View
        accessibilityRole="radio"
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            undefined,
          ]
        }
        type="radio"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderColor": "hsl(210, 8%, 55%)",
                "borderRadius": 999,
                "borderWidth": 2,
                "justifyContent": "center",
              },
              Object {
                "height": 20,
                "width": 20,
              },
              undefined,
            ]
          }
          testID="amplify__radio-button__container"
        />
        <Text
          accessibilityRole="text"
          style={
            Array [
              Object {
                "fontSize": 16,
                "fontWeight": "400",
                "marginHorizontal": 4,
                "marginVertical": 2,
              },
              Object {
                "color": "hsl(210, 50%, 10%)",
              },
              undefined,
            ]
          }
        >
          h***o@world.com
        </Text>
      </View>
      <View
        accessibilityRole="radio"
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            undefined,
          ]
        }
        type="radio"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderColor": "hsl(210, 8%, 55%)",
                "borderRadius": 999,
                "borderWidth": 2,
                "justifyContent": "center",
              },
              Object {
                "height": 20,
                "width": 20,
              },
              undefined,
            ]
          }
          testID="amplify__radio-button__container"
        />
        <Text
          accessibilityRole="text"
          style={
            Array [
              Object {
                "fontSize": 16,
                "fontWeight": "400",
                "marginHorizontal": 4,
                "marginVertical": 2,
              },
              Object {
                "color": "hsl(210, 50%, 10%)",
              },
              undefined,
            ]
          }
        >
          ***********0000
        </Text>
      </View>
      <View
        accessibilityRole="radio"
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            undefined,
          ]
        }
        type="radio"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderColor": "hsl(210, 8%, 55%)",
                "borderRadius": 999,
                "borderWidth": 2,
                "justifyContent": "center",
              },
              Object {
                "height": 20,
                "width": 20,
              },
              undefined,
            ]
          }
          testID="amplify__radio-button__container"
        />
        <Text
          accessibilityRole="text"
          style={
            Array [
              Object {
                "fontSize": 16,
                "fontWeight": "400",
                "marginHorizontal": 4,
                "marginVertical": 2,
              },
              Object {
                "color": "hsl(210, 50%, 10%)",
              },
              undefined,
            ]
          }
        >
          testValue
        </Text>
      </View>
    </View>
  </View>,
  <View
    accessibilityRole="button"
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        null,
        Object {
          "backgroundColor": "teal",
          "marginVertical": 8,
          "paddingVertical": 12,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "alignSelf": "center",
          },
          Object {
            "color": "white",
            "fontSize": 16,
            "fontWeight": "bold",
          },
        ]
      }
    >
      Verify
    </Text>
  </View>,
  <View
    accessibilityRole="button"
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        null,
        Object {
          "marginVertical": 8,
          "paddingVertical": 12,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "alignSelf": "center",
          },
          Object {
            "color": "teal",
          },
        ]
      }
    >
      Skip
    </Text>
  </View>,
]
`;

exports[`VerifyUser renders as expected when isPending is true 1`] = `
Array [
  <Text
    accessibilityRole="header"
    style={
      Array [
        Object {
          "color": "black",
        },
        Object {
          "fontSize": 34,
          "fontWeight": "300",
          "lineHeight": 51,
        },
        undefined,
      ]
    }
  >
    Account recovery requires verified contact information
  </Text>,
  <View
    style={
      Array [
        Object {
          "flexDirection": "column-reverse",
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityRole="radiogroup"
      style={
        Object {
          "flexDirection": "column",
        }
      }
    >
      <View
        accessibilityRole="radio"
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "opacity": 0.6,
            },
            undefined,
          ]
        }
        type="radio"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderColor": "hsl(210, 8%, 55%)",
                "borderRadius": 999,
                "borderWidth": 2,
                "justifyContent": "center",
              },
              Object {
                "height": 20,
                "width": 20,
              },
              undefined,
            ]
          }
          testID="amplify__radio-button__container"
        />
        <Text
          accessibilityRole="text"
          style={
            Array [
              Object {
                "fontSize": 16,
                "fontWeight": "400",
                "marginHorizontal": 4,
                "marginVertical": 2,
              },
              Object {
                "color": "hsl(210, 50%, 10%)",
              },
              undefined,
            ]
          }
        >
          h***o@world.com
        </Text>
      </View>
      <View
        accessibilityRole="radio"
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "opacity": 0.6,
            },
            undefined,
          ]
        }
        type="radio"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderColor": "hsl(210, 8%, 55%)",
                "borderRadius": 999,
                "borderWidth": 2,
                "justifyContent": "center",
              },
              Object {
                "height": 20,
                "width": 20,
              },
              undefined,
            ]
          }
          testID="amplify__radio-button__container"
        />
        <Text
          accessibilityRole="text"
          style={
            Array [
              Object {
                "fontSize": 16,
                "fontWeight": "400",
                "marginHorizontal": 4,
                "marginVertical": 2,
              },
              Object {
                "color": "hsl(210, 50%, 10%)",
              },
              undefined,
            ]
          }
        >
          ***********0000
        </Text>
      </View>
      <View
        accessibilityRole="radio"
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "opacity": 0.6,
            },
            undefined,
          ]
        }
        type="radio"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderColor": "hsl(210, 8%, 55%)",
                "borderRadius": 999,
                "borderWidth": 2,
                "justifyContent": "center",
              },
              Object {
                "height": 20,
                "width": 20,
              },
              undefined,
            ]
          }
          testID="amplify__radio-button__container"
        />
        <Text
          accessibilityRole="text"
          style={
            Array [
              Object {
                "fontSize": 16,
                "fontWeight": "400",
                "marginHorizontal": 4,
                "marginVertical": 2,
              },
              Object {
                "color": "hsl(210, 50%, 10%)",
              },
              undefined,
            ]
          }
        >
          testValue
        </Text>
      </View>
    </View>
  </View>,
  <View
    accessibilityRole="button"
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        null,
        Object {
          "backgroundColor": "teal",
          "marginVertical": 8,
          "paddingVertical": 12,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "alignSelf": "center",
          },
          Object {
            "color": "white",
            "fontSize": 16,
            "fontWeight": "bold",
          },
        ]
      }
    >
      Verifying...
    </Text>
  </View>,
  <View
    accessibilityRole="button"
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        null,
        Object {
          "marginVertical": 8,
          "paddingVertical": 12,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "alignSelf": "center",
          },
          Object {
            "color": "teal",
          },
        ]
      }
    >
      Skip
    </Text>
  </View>,
]
`;

exports[`VerifyUser renders as expected with errors 1`] = `
Array [
  <Text
    accessibilityRole="header"
    style={
      Array [
        Object {
          "color": "black",
        },
        Object {
          "fontSize": 34,
          "fontWeight": "300",
          "lineHeight": 51,
        },
        undefined,
      ]
    }
  >
    Account recovery requires verified contact information
  </Text>,
  <View
    style={
      Array [
        Object {
          "flexDirection": "column-reverse",
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityRole="radiogroup"
      style={
        Object {
          "flexDirection": "column",
        }
      }
    >
      <View
        accessibilityRole="radio"
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            undefined,
          ]
        }
        type="radio"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderColor": "hsl(210, 8%, 55%)",
                "borderRadius": 999,
                "borderWidth": 2,
                "justifyContent": "center",
              },
              Object {
                "height": 20,
                "width": 20,
              },
              undefined,
            ]
          }
          testID="amplify__radio-button__container"
        />
        <Text
          accessibilityRole="text"
          style={
            Array [
              Object {
                "fontSize": 16,
                "fontWeight": "400",
                "marginHorizontal": 4,
                "marginVertical": 2,
              },
              Object {
                "color": "hsl(210, 50%, 10%)",
              },
              undefined,
            ]
          }
        >
          h***o@world.com
        </Text>
      </View>
      <View
        accessibilityRole="radio"
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            undefined,
          ]
        }
        type="radio"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderColor": "hsl(210, 8%, 55%)",
                "borderRadius": 999,
                "borderWidth": 2,
                "justifyContent": "center",
              },
              Object {
                "height": 20,
                "width": 20,
              },
              undefined,
            ]
          }
          testID="amplify__radio-button__container"
        />
        <Text
          accessibilityRole="text"
          style={
            Array [
              Object {
                "fontSize": 16,
                "fontWeight": "400",
                "marginHorizontal": 4,
                "marginVertical": 2,
              },
              Object {
                "color": "hsl(210, 50%, 10%)",
              },
              undefined,
            ]
          }
        >
          ***********0000
        </Text>
      </View>
      <View
        accessibilityRole="radio"
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            undefined,
          ]
        }
        type="radio"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderColor": "hsl(210, 8%, 55%)",
                "borderRadius": 999,
                "borderWidth": 2,
                "justifyContent": "center",
              },
              Object {
                "height": 20,
                "width": 20,
              },
              undefined,
            ]
          }
          testID="amplify__radio-button__container"
        />
        <Text
          accessibilityRole="text"
          style={
            Array [
              Object {
                "fontSize": 16,
                "fontWeight": "400",
                "marginHorizontal": 4,
                "marginVertical": 2,
              },
              Object {
                "color": "hsl(210, 50%, 10%)",
              },
              undefined,
            ]
          }
        >
          testValue
        </Text>
      </View>
    </View>
  </View>,
  <View
    accessibilityRole="alert"
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#f5bcbc",
          "flexDirection": "row",
          "paddingHorizontal": 4,
          "paddingVertical": 16,
          "width": "100%",
        },
        undefined,
      ]
    }
  >
    <Image
      accessibilityRole="image"
      source={
        Object {
          "testUri": "../../../src/assets/icons/error.png",
        }
      }
      style={
        Array [
          Object {
            "height": 20,
            "resizeMode": "contain",
            "tintColor": undefined,
            "width": 20,
          },
          Object {
            "margin": 4,
          },
        ]
      }
    />
    <Text
      style={
        Array [
          Object {
            "flex": 1,
            "paddingHorizontal": 4,
          },
          undefined,
        ]
      }
    >
      Something went wrong
    </Text>
  </View>,
  <View
    accessibilityRole="button"
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        null,
        Object {
          "backgroundColor": "teal",
          "marginVertical": 8,
          "paddingVertical": 12,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "alignSelf": "center",
          },
          Object {
            "color": "white",
            "fontSize": 16,
            "fontWeight": "bold",
          },
        ]
      }
    >
      Verify
    </Text>
  </View>,
  <View
    accessibilityRole="button"
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        null,
        Object {
          "marginVertical": 8,
          "paddingVertical": 12,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "alignSelf": "center",
          },
          Object {
            "color": "teal",
          },
        ]
      }
    >
      Skip
    </Text>
  </View>,
]
`;
